--- a/app/src/main/res/layout/fragment_add_edit_note.xml
+++ b/app/src/main/res/layout/fragment_add_edit_note.xml
@@ -18,6 +18,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <android.support.design.widget.TextInputEditText
+            android:id="@+id/titleEditText"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:hint="@string/title"/>
@@ -34,6 +35,7 @@
         app:layout_constraintTop_toBottomOf="@+id/titleContainer">
 
         <android.support.design.widget.TextInputEditText
+            android:id="@+id/descriptionEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/description"/>
